crates/config/macros/tests/ui/fail/env_test/constness.stderr
error: `const` is not allowed in test code
  --> tests/ui/fail/env_test/constness.rs:25:5
   |
25 | pub const fn hewo() {}
   |     ^^^^^
